[package]
name = "test_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.19", features = ["map_physical_memory"]}
volatile = "0.3.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.2"
x86_64 = "0.14.6"
uart_16550 = "0.2.15"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[package.metadata.bootimage]
run-args = ["-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300

[[test]]
name = "stack_overflow"
harness = false